syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zupacademy.marciosouza";
option java_outer_classname = "Pix_keymanager";
option objc_class_prefix = "HLW";

package br.com.zupacademy.marciosouza;

service KeymanagerCreateKeyService {
  rpc create(CreateKeyRequest) returns (CreateKeyResponse) {}
}

message CreateKeyRequest{
  string clienteId = 1;
  TipoChave tipoChave = 2;
  string chave = 3;
  TipoConta tipoConta = 4;
}

message CreateKeyResponse {
  string clienteId = 1;
  string pixId = 2;
}

enum TipoChave {
  CPF = 0;
  TELEFONE = 1;
  EMAIL = 2;
  ALEATORIA = 3;
}

enum TipoConta {
  CONTA_CORRENTE = 0;
  CONTA_POUPANCA = 1;
}